<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
        android:id="@+id/menu_item_sessions"
        android:icon="@drawable/ic_action_schedule"
        android:orderInCategory="1"
        android:title="@string/sessions"
        />
    <item
        android:id="@+id/menu_item_speakers"
        android:icon="@drawable/ic_social_mood"
        android:orderInCategory="2"
        android:title="@string/speakers"
        />
    <item
        android:id="@+id/menu_item_sponsors"
        android:icon="@drawable/ic_action_wallet_giftcard"
        android:orderInCategory="3"
        android:title="@string/sponsors"
        />
    <item
        android:id="@+id/menu_item_code_of_conduct"
        android:icon="@drawable/ic_action_description"
        android:orderInCategory="4"
        android:title="@string/code_of_conduct"
        />
    <item
        android:id="@+id/menu_item_settings"
        android:checkable="false"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="5"
        android:title="@string/settings"
        />
  </group>
</menu>